<resources>
    <string name="app_name">DrawingApp</string>
    <string name="color_red">Color red</string>
    <string name="color_orange">Color orange</string>
    <string name="color_yellow">Color yellow</string>
    <string name="color_green">Color green</string>
    <string name="color_blue_light">Color blue light</string>
    <string name="color_blue_dark">Color blue dark</string>
    <string name="color_purple">Color purple</string>
    <string name="gallery_image_txt">Gallery image</string>
    <string name="brush_button_txt">Brush button</string>
    <string name="save_button_txt">Save button</string>
    <string name="gallery_button_txt">Gallery button</string>
    <string name="undo_button_txt">Undo button</string>
    <string name="color_picker_button_txt">Color picker button</string>
    <string name="dialog_yes">Yes</string>
</resources>