<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.example.drawingapp.DrawingView
        android:id="@+id/drawing_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/color_menu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/color_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@id/tools_menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/red_button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="2dp"
            android:background="@drawable/red_bg"
            android:contentDescription="@string/color_red"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/orange_button"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageButton
            android:id="@+id/orange_button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="2dp"
            android:background="@drawable/orange_bg"
            android:contentDescription="@string/color_orange"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/yellow_button"
            app:layout_constraintStart_toEndOf="@id/red_button" />

        <ImageButton
            android:id="@+id/yellow_button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="2dp"
            android:background="@drawable/yellow_bg"
            android:contentDescription="@string/color_yellow"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/green_button"
            app:layout_constraintStart_toEndOf="@id/orange_button" />

        <ImageButton
            android:id="@+id/green_button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="2dp"
            android:background="@drawable/green_bg"
            android:contentDescription="@string/color_green"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/blue_light_button"
            app:layout_constraintStart_toEndOf="@id/yellow_button" />

        <ImageButton
            android:id="@+id/blue_light_button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="2dp"
            android:background="@drawable/blue_light_bg"
            android:contentDescription="@string/color_blue_light"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/blue_dark_button"
            app:layout_constraintStart_toEndOf="@id/green_button" />

        <ImageButton
            android:id="@+id/blue_dark_button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="2dp"
            android:background="@drawable/blue_dark_bg"
            android:contentDescription="@string/color_blue_dark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/purple_button"
            app:layout_constraintStart_toEndOf="@id/blue_light_button" />

        <ImageButton
            android:id="@+id/purple_button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="2dp"
            android:background="@drawable/purple_bg"
            android:contentDescription="@string/color_purple"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/blue_dark_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/tools_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/brush_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/brush_button_txt"
            android:scaleType="fitXY"
            android:src="@drawable/ic_brush"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/save_button"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageButton
            android:id="@+id/save_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/save_button_txt"
            android:scaleType="fitXY"
            android:src="@drawable/ic_save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/gallery_button"
            app:layout_constraintStart_toEndOf="@id/brush_button" />

        <ImageButton
            android:id="@+id/gallery_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/gallery_button_txt"
            android:scaleType="fitXY"
            android:src="@drawable/ic_gallery"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/undo_button"
            app:layout_constraintStart_toEndOf="@id/save_button" />

        <ImageButton
            android:id="@+id/undo_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/undo_button_txt"
            android:scaleType="fitXY"
            android:src="@drawable/ic_undo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/color_picker_button"
            app:layout_constraintStart_toEndOf="@id/gallery_button" />

        <ImageButton
            android:id="@+id/color_picker_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/color_picker_button_txt"
            android:scaleType="fitXY"
            android:src="@drawable/ic_color_wheel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/undo_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
